docs: clarify pure-Java vs JNA/native-binding tools for jbang --native in AGENTS.md